<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_camera_publisher</name>
  <version>0.0.0</version>
  <description>Publish camera images from CARLA via ROS image transport</description>
  <maintainer email="michal.sojka@cvut.cz">Michal Sojka</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <build_depend>fmt</build_depend>
  <build_depend>libcarla-client</build_depend>
  <build_depend>libjpeg</build_depend>
  <build_depend>libpng</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
